refactor: post-PR#18 review cleanup — promoted-rule fixes + REST-layer polish
Per docs/post-pr18-code-review.md (whole-repo review against spring-java21
SKILL + review-ledger promoted patterns; findings concentrated in the new
PR #18 REST layer):

- list-get-first: chain.getLast() in toDetail; getFirst() x3 in tests
- optional-idiom: currentTask returns Optional<Task>, consumed via map
- dto-builder (promoted at 2nd hit): @Builder on PipelineDetail/TaskDetail,
  named construction replaces 19/18-arg positional new
- long[]{done,total} magic-index aggregation -> nested TaskProgressCount
  record (teeing collector); drops static mutable array constant
- scheduler-initial-delay folded into ExecutionSettings (last stray @Value),
  validated like the other 11 keys; PipelineScheduler ctor param removed
- GlobalAdvice moved advice/ -> controller/ per AGENTS.md #6 package set
- TaskStateMachine.retryOrFail: single now for readyAt/nextCheckAt
- dueLagMillis = 0 for terminal pipelines (was growing forever)
- tests: runUntilTerminal fails loudly on non-termination; claim-attempt
  count asserted in the without-hammering test; WithoutNPlusOne dropped from
  a name that measured nothing; 6 unused imports; camelCase renames;
  PipelineUniquenessTest javadoc widened to the creation contract it covers
- harness: dto-builder promoted (agent pattern 15), advice-package row
  resolved, R6 changelog entry

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>